
5.2a2 -> 5.2a3:
    - rpm.org: Add posix.mkstemp() to Lua posix lib.
    - jbj: fix: apply _dependency_whiteout to erased relations too.
    - jbj: lua: display rudimentary info about lua with --showrc.
    - jbj: lua: preload "crypto" in rpmlua.c.
    - jbj: lua: lom.lua has requires("lxp"), so preload "lxp" in rpmlua.c.
    - jbj: WRlua: preserve forward linkage by avoiding vmefail/get_date.
    - jbj: lua: add virgin luasocket-2.0.2 lua bindings (unused atm).
    - jbj: lua: add license, and compile lxplib.
    - jbj: lua: add lom.lua wrapper for lxplib.
    - jbj: lua: diddle bin2c.c to permit multiple *.lua args.
    - jbj: lua: add virgin lxplib lua bindings (unused atm).
    - jbj: lua: add license, hotwire CRYPTO_OPENSSL, and compile lcrypto.
    - jbj: lua: add virgin lcrypto lua bindings (unused atm).
    - jbj: lua: ensure that internal lua has all the right files.
    - jbj: add a relation to to force install-before-erase.
    - jbj: display dependency loops as an error for now.
    - rpm.org: add %{_default_patch_fuzz} macro for patch --fuzz
    - afb: make buildroot path configurable, but keep old defaults
    - rpm.org: add %{_buildrootdir} macro for use with %{buildroot}

5.2a1 -> 5.2a2:
    - jbj: permit --whatconflicts/--whatobsoletes to be displayed with --help.
    - jbj: add flag to keep trailing slash in dirnames dependency set.
    - jbj: fix a memory leak by calling mireClean().
    - jbj: save rpmdb trigger patterns in psm.c, eliminating 2nd retrieve.
    - jbj: use generic retrieval code for --group and --triggerdby too.
    - jbj: attempt generic retrieval code using --whatconflicts/--whatobsoletes.
    - jbj: add --whatconflicts/--whatobsoletes, hidden for now.
    - jbj: generate Obsoletename index in rpmdb.
    - jbj: use rpmdsMatch to detect rpmdb trigger firing.
    - jbj: add rpmdsMatch to match dependency against set.
    - jbj: refactor the sumNN wrappers out of digest.c too.
    - jbj: include crc routines in a standalone file.